--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 	<meta name="viewport" content="width=device-width">
 
 	<link rel="shortcut icon" href="/images/favicon.ico">
+
 	<link rel="stylesheet" href="/css/style.css">
+
+	<meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+	<meta property="og:title"              content="Makers Club Auckland" />
+	<meta property="og:description"        content="Makers Club is a monthly get together for people who enjoy making things." />
+	<meta property="og:image"              content="http://makersclubakl.com/images/mc-facebook.jpg" />
 
 	<title>Makers Club Auckland</title>
 
@@ -20,15 +26,17 @@
 
 <body>
 
-  <img class="2x" draggable="false" src="/images/makers-club.png" width="32px" height="32px"/>
+  <img class="2x" draggable="false" src="/images/makers-club.jpg" width="32px" height="32px"/>
 
   <main>
   	<h1>Makers Club meets the first Wednesday of every month.<h1>
-  	<h2> This month it's on the <em>1st of February</em> at <a href="https://goo.gl/maps/kfXoQiFXXpK2" target="_blank">Red Bar</a> around <em>7pm</em>.</h2>
+  	<h2>This month it's on the <em>1st of March</em> at <a href="https://goo.gl/maps/kfXoQiFXXpK2" target="_blank">Red Bar</a> around <em>7pm</em>.</h2>
 
   	<p>Makers Club is for people who enjoy making things. Designers, photographers, illustrators, typographers, filmmakers, programmers, every maker is welcome. There is no agenda, it's not for recruiting, the point is just to meet, talk and drink with other people.</p>
 
-  	<a class="button" href="https://www.facebook.com/events/1006679192808918/" target="_blank">Respond on Facebook</a>
+  	<a class="button" href="https://www.facebook.com/events/1803868849875937/" target="_blank">Respond on Facebook</a>
+
+
   </main>
 
   <footer>
